# mrparracho.github.io

./: .gitignore  DEPLOYMENT.md  README.md  README.template.md  SECURITY.md  SETUP.md  _config.yml  architecture-diagram.md  index.html  index.template.html  main.py  orb.html  package.json  projects.json  requirements.txt  sphere-test.html  vercel.json
.github/workflows/: build.yml
api/: index.py
backend/: rag.py
backend/fastapi-rag/: .gitignore  Dockerfile  README.md  README.template.md  chat_interface.html  cli_chat.py  env.example  minimal_test.html  portfolio_chat.html  pyproject.toml  requirements.txt  run_local.sh  simple_test.html  start.sh  test_chat.html
backend/fastapi-rag/app/: __init__.py  chroma_db.py  document_manager.py  main.py  rag.py
backend/fastapi-rag/app/static/: rag_manager.html
backend/fastapi-rag/docs/: cv.md  faq.md  projects.md
backend/fastapi-rag/docs/templates/: template-cv.md  template-faq.md
backend/fastapi-rag/scripts/: ingest.py  reset_collection.py
backend/fastapi-rag/tests/: run_tests.py  test_imports.py  test_rag.py
backend/fastapi-rag/tts/: tts_play.py
fastapi-rag/: .gitignore  env.example  pyproject.toml  start.sh
fastapi-rag/app/: db.py  main.py  rag.py
fastapi-rag/docs/: cv.md  faq.md  projects.md
fastapi-rag/scripts/: ingest.py  schema.sql
fastapi-rag/tests/: test_rag.py
static/css/: main.css
static/js/: config.template.js  elevenlabs-integration.js  main.js  rag-chat.js
